[project]
name = "motorapi-mcp"
version = "1.0.0"
description = "MCP integration for MotorAPI.dk - Danish vehicle registration lookup"
authors = [
    {name = "Alexander Schröder", email = ""}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/ShredderAlex/motorapi-mcp"
Repository = "https://github.com/ShredderAlex/motorapi-mcp"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
motorapi-mcp = "server:main"
